# agentverif

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README.zh.md  pyproject.toml  ruff.toml  setup.sh
.github/workflows/: ci.yml  docker.yml  publish.yml
api/: agentverif.db  requirements.txt  scanner.py  server.py
clawhub-skill/: SKILL.md  package.json  skill.py
docs/: langchain.md
github-action/: README.md  action.yml
huggingface-space/: README.md  app.py  requirements.txt
mcp/: README.md  agentverif-mcp.service  handlers.py  models.py  privacy.md  requirements.txt  server.py
nginx/: agentverif.conf
src/agentcop_sign/: __init__.py  badges.py  cli.py  client.py  config.py  crypto.py  models.py  scanner.py  signer.py  verifier.py
src/agentverif_sign/: __init__.py  __main__.py  badges.py  cli.py  client.py  config.py  crypto.py  langchain_tool.py  models.py  scanner.py  signer.py  verifier.py
systemd/: agentverif-api.service
tests/: conftest.py  test_badges.py  test_cli.py  test_client.py  test_config.py  test_crypto.py  test_docker_and_mcp.py  test_ecosystem_fixes.py  test_models.py  test_scanner.py  test_signer.py  test_verifier.py
verify/: index.html
web/: claude.html  first100.html  index.html  langchain.html  mcp.html  openclaw.html  privacy.html  robots.txt  sitemap.xml  terms.html
web/assets/: style.css
web/docs/: index.html
