[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentverif-sign"
version = "0.1.0"
description = "Sign and verify AI agent packages. The SSL certificate for agent fleets."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "agentcop.live" }]
keywords = [
  "agent security",
  "AI agents",
  "package signing",
  "trust",
  "agentcop",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Software Development :: Build Tools",
  "Typing :: Typed",
]
dependencies = ["click>=8.0", "requests>=2.28"]

[project.optional-dependencies]
crypto = ["cryptography>=41.0"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://agentcop.live"
Documentation = "https://docs.agentcop.live/guides/agentverif-sign"
Repository = "https://github.com/agentcop/agentverif-sign"
"Bug Tracker" = "https://github.com/agentcop/agentverif-sign/issues"

[project.scripts]
agentverif-sign = "agentverif_sign.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentverif_sign"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PIE", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["agentverif_sign"]

[tool.coverage.run]
source = ["agentverif_sign"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
