[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentverif-sign"
version = "0.1.2"
description = "✅ Sell verified agents. Buyers trust verified packages. Unsigned agents get ignored. Add verification in seconds."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "agentverif.com" }]
keywords = [
  "ai-agent",
  "agent-security",
  "agent-signing",
  "llm-security",
  "agent-verification",
  "owasp-llm",
  "agent-certificate",
  "agent-marketplace",
  "agent-trust",
  "agentverif",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = ["click>=8.0", "requests>=2.28"]

[project.optional-dependencies]
crypto = ["cryptography>=41.0"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://agentverif.com"
Documentation = "https://agentverif.com/docs"
Repository = "https://github.com/trusthandoff/agentverif"
"Bug Tracker" = "https://github.com/trusthandoff/agentverif/issues"
Changelog = "https://github.com/trusthandoff/agentverif/releases"

[project.scripts]
agentverif-sign = "agentverif_sign.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentverif_sign"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PIE", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["agentverif_sign"]

[tool.coverage.run]
source = ["agentverif_sign"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
